Implemented the has move method
checks if a given pokemon has a given move. Returns true or false.