@@ -11,18 +11,18 @@ public class Main {
     public static int P2numberOfFaintedMons=0;
 
     public static void main (String[] args) {
-    ReadFile read = new ReadFile();
-        String copy = "something went wrong; ";
-        try {
-//			copy = Files.readString(Paths.get("Stats.txt"));
-            byte[] file = Files.readAllBytes(Paths.get("ShowdownLearnsets.txt"));
-            copy = new String(file);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-    System.out.println(
-//            read.orderMoves(
-            (read.formatShowDownLearnSets(copy).replace("\t","")));
+//    ReadFile read = new ReadFile();
+//        String copy = "something went wrong; ";
+//        try {
+////			copy = Files.readString(Paths.get("Stats.txt"));
+//            byte[] file = Files.readAllBytes(Paths.get("ShowdownLearnsets.txt"));
+//            copy = new String(file);
+//        } catch (IOException e) {
+//            e.printStackTrace();
+//        }
+//    System.out.println(
+////            read.orderMoves(
+//            (read.formatShowDownLearnSets(copy).replace("\t","")));
 
         EaseOfUse ez=new EaseOfUse();
         Scanner kboard=new Scanner(System.in);
@@ -33,8 +33,10 @@ public class Main {
         BasicPokemon[] p1mons=new BasicPokemon[6];
         BasicPokemon[] p2mons=new BasicPokemon[6];
         int[][] givenMoves = new int[6][4];
+
         ez.print("P1) Select your first pokemon's dex number");
         p1mons[0]=new BasicPokemon(kboard.nextInt());
+        System.out.println(calc.hasMove(p1mons[0],new BasicMove(512)));
         ez.print("P1) Select your second pokemon's dex number");
         p1mons[1]=new BasicPokemon(kboard.nextInt());
         ez.print("P1) Select your third pokemon's dex number");
